--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,20 +7,21 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.10"
+   os: ubuntu-22.04
+   tools:
+     python: "3.10"
 
+# Build documentation in the docs/ directory with Sphinx
 sphinx:
-  builder: html
-  configuration: conf.py
-  fail_on_warning: true
+   configuration: docs/source/conf.py
+
+# If using Sphinx, optionally build your docs in additional formats such as PDF
+# formats:
+#    - pdf
 
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
    - requirements: docs/requirements.txt
-
-formats:
-  - epub
-  - pdf
+#   - method: pip
+#     path: .
