--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,21 +7,21 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-   os: ubuntu-22.04
+
+   os: ubuntu-22.04  # Options: ubuntu-20.04, ubuntu-22.04
    tools:
      python: "3.10"
+#     python: "3"  # last stable CPython version
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/source/conf.py
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
-# formats:
+# formats:  # Options: htmlzip, pdf, epub, all
 #    - pdf
 
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
    - requirements: docs/requirements.txt
-#   - method: pip
-#     path: .
