--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # 开发依赖
 # Window下安装错误需要设置设置环境变量 PYTHONUTF8 为 1 。
 # 运行命令：setx PYTHONUTF8 1
+# 更新依赖库，运行以下命令
 # python -m pip install -U pip
 # python -m pip install -U --upgrade-strategy eager -r requirements.txt
 
