--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Git 忽略文件
 .hatch/
+Temp/
+.data/
+.ruff_cache/
+uv.lock
 
 # ---------------------------------------------
 # 参考：https://github.com/github/gitignore/blob/main/Python.gitignore
