--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,14 +16,14 @@ authors = [{ name = "kevin", email = "kevin@example.com" }]
 classifiers = [
     "Programming Language :: Python :: 3 :: Only",
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
-    "Operating System :: OS Independent",
+    "Operating System :: Microsoft :: Windows",
     "Development Status :: 5 - Production/Stable",
 ]
 
 [project.urls]
 Homepage = "https://github.com/kisa747/notifier"
 Documentation = "https://github.com/kisa747/notifier#readme"
-#Issues = "https://github.com/unknown/notifier/issues"
+Issues = "https://github.com/kisa747/notifier/issues"
 Source = "https://github.com/kisa747/notifier"
 
 [project.scripts]
